# My_Reactor

./: .gitignore  Acceptor.cpp  Acceptor.h  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  Epoller.cpp  Epoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  README.md  Server.cpp  Server.h  TcpConnection.cpp  TcpConnection.h  TimerQueue.h  client  client.cpp  http_server  main.cpp  mini.c  minimal_server  my_server  server  server_res.0001.heap  server_res.0002.heap  server_res.0003.heap  server_res.0004.heap  test_buffer  test_buffer.cpp  test_timer
docs/: 01_wsl_bottleneck.md  02_hardware_limits.md  03-cpu-affinity-and-softirq.md  04_MasterSlave_Bottleneck_Analysis.md  05_SO_REUSEPORT_And_FurtherBotteneck.md  06_Cachegrind_Profiling_L1_Pollution_And_L2_Stress_Test.md  07_Heap_Profiling_Zero_Allocation_And_Steady_State_Optimization.md  08_Perf_Trace_Zero_Copy_Profiling_And_Virtual_Network_Bottlenecks.md  09_network_kcp_cross_platform_alignment.md
example/: main.cpp
include/: Buffer.h  Channel.h  Epoller.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  ObjectPool.h  Server.h  TcpConnection.h  TimerQueue.h
scripts/: echo.lua
src/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Epoller.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  InetAddress.cpp  Server.cpp  TcpConnection.cpp  TimerQueue.cpp
test/: client.cpp  test_timer.cpp
